--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -75,3 +75,15 @@ Sophisticated Backpacks
 Sophisticated Core
 Sophisticated Storage
 Re-Avaritia-forged
+Entangled
+Exposer
+Fluid Tank
+Flux Networks
+PackagedAvaritia
+RS Insert Export Upgrade
+RSInfinityBooster
+RSRequestify
+Refined Crafter Proxy
+Refined Storage
+Refined Storage Addons
+Tesseract
