--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -190,3 +190,4 @@ packagedmekemicals:chemical_package_contents
 packagedmekemicals:chemical_package_filling
 avaritia:compressor
 avaritia:extreme_craft
+fluxnetworks:creating_flux
